--- a/JCGS_Writeup/bibliography.bib
+++ b/JCGS_Writeup/bibliography.bib
@@ -202,3 +202,23 @@
   annotation = {00011},
   file = {/Users/hofmann/Zotero/storage/FL9KUP2X/Vorburger et al. - 2016 - Topography measurements and applications in ballis.pdf;/Users/hofmann/Zotero/storage/M7CX2TZB/Vorburger et al. - 2015 - Topography measurements and applications in ballis.pdf}
 }
+
+@article{willsLinkedDataViews2008,
+  title = {Linked Data Views},
+  author = {Wills, Graham},
+  year = {2008},
+  publisher = {Handbook of Data Visualization},
+  doi = {10.1007/978-3-540-33037-0_10},
+  keywords = {Data View, Dynamic Graphic, National League, Salary Data, Summary Function}
+  file = {}
+}
+
+@article{eickHighInteractionGraphics1995,
+  title = {High interaction Graphics,
+  author = {Eick, Stephen G., and Graham J. Wills},
+  year = {},
+  publisher = {},
+  doi = {},
+  keywords = {}
+  file = {}
+}
